			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: PL_get_mpz().  Matt Lilley.

  * FIXED/MODIFIED: atom_length/2 to raise a type error on illegal 1st
    argument instead of failing silently.  Ulrich Neumerkel.

  * FIXED: 32-bit systems reporting negative heap usage when over 2GB.
    Ulrich Neumerkel.

  * FIXED: atoms in exceptions had their reference count incremented,
    harming atom-gc and ultimately overflowing the reference count.
    Ulrich Neumerkel.

  * FIXED/MODIFIED: number_codes(-,+) and friends to issue a type_error
    instead of a representation error if the list is not a code or char
    list.  Ulrich Neumerkel.

  * PORT: check for -pthreads in addition to -pthread.  Lucas Barbuto.

  * FIXED: Bug#299: possible that between(+Low, inf, X) *only* returns
    X == Low.  Keri Harris.

  * PORT: Bug#298: enhance systems supporting cpu_count flag.  Keri Harris.
    Also added support for sysctlbyname() to get this value for MacOS X.
	
  * FIXED: Some issues in **/1 (pow) using integers.  Ulrich Neumerkel.

  * FIXED: concurrent/2.  After test program by Markus Triska.

  * FIXED: Properly handle errors from DdeAccessData().  Still unclear 
    why this function fails though??

  * FIXED: Bug#297: Memory leak in arithmetic overflow of <<.  Keri Harris.

  * FIXED: Bug#295: compilation issues in different modes (not really
    used anymore).  Keri Harris.

  * FIXED: Handle interrupt/abort during atom and functor creation.
    Ulrich Neumerkel.

  * ENHANCED: Clarify undefined predicate messages from toplevel.
    Ulrich Neumerkel.

  * FIXED: Possible crash in profiler wehn using with JPL.  Alexandre Vautier.

  * FIXED: statistics on atoms freed by atom-GC to use 64-bit counter on
    all platforms.  Ulrich Neumerkel.
