@@ -5,7 +5,7 @@
     Author:        Jan Wielemaker
     E-mail:        wielemak@science.uva.nl
     WWW:           http://www.swi-prolog.org
-    Copyright (C): 1985-2005, University of Amsterdam
+    Copyright (C): 1985-2007, University of Amsterdam
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Lesser General Public
@@ -30,6 +30,8 @@
 #ifdef O_GMP
 #include <gmp.h>
 
+#define O_MY_GMP_ALLOC 1
+
 COMMON(void) 	initGMP(void);
 COMMON(void)	get_integer(word w, number *n);
 COMMON(void)	promoteToMPZNumber(number *n);
@@ -39,6 +41,7 @@ COMMON(void)	addMPZToBuffer(Buffer b, mpz_t mpz);
 COMMON(char *)	loadMPZFromCharp(const char *data, Word r, Word *store);
 COMMON(char *)	skipMPZOnCharp(const char *data);
 COMMON(int)	mpz_to_int64(mpz_t mpz, int64_t *i);
+
 #else /*O_GMP*/
 
 #define get_integer(w, n) \
@@ -52,18 +55,57 @@ COMMON(int)	mpz_to_int64(mpz_t mpz, int64_t *i);
 
 #endif /*O_GMP*/
 
+
 		 /*******************************
-		 *	 COMMON FUNCTIONS	*
+		 *	  GMP ALLOCATION	*
 		 *******************************/
 
-COMMON(int)	PL_unify_number(term_t t, Number n);
-COMMON(void)	get_number(word w, Number n  ARG_LD);
-COMMON(int)	PL_get_number(term_t t, Number n);
-COMMON(word)	put_number(Number n);
-COMMON(void)	promoteToRealNumber(Number n);
-COMMON(void)	same_type_numbers(Number n1, Number n2);
-COMMON(void)    promoteNumber(Number n1, numtype type);
-COMMON(int)	cmpNumbers(Number n1, Number n2);
-COMMON(void)	cpNumber(Number to, Number from);
+#if O_MY_GMP_ALLOC
+typedef struct mp_mem_header
+{ struct mp_mem_header *prev;
+  struct mp_mem_header *next;
+  struct ar_context *context;
+} mp_mem_header;
+
+typedef struct ar_context
+{ struct ar_context *parent;
+  size_t	     allocated;
+} ar_context;
+
+#define O_GMP_LEAK_CHECK 0
+#if O_GMP_LEAK_CHECK
+#define GMP_LEAK_CHECK(g) g
+#else
+#define GMP_LEAK_CHECK(g)
+#endif 
+
+#define AR_CTX	ar_context __PL_ar_ctx;
+#define AR_BEGIN() \
+	do \
+	{ __PL_ar_ctx.parent    = LD->gmp.context; \
+	  LD->gmp.context	= &__PL_ar_ctx; \
+	  GMP_LEAK_CHECK(__PL_ar_ctx.allocated = LD->gmp.allocated); \
+	} while(0)
+#define AR_END() \
+	do \
+	{ LD->gmp.context = __PL_ar_ctx.parent; \
+	  GMP_LEAK_CHECK(if ( __PL_ar_ctx.allocated != LD->gmp.allocated ) \
+			 { Sdprintf("GMP: lost %ld bytes\n", \
+				    LD->gmp.allocated-__PL_ar_ctx.allocated); \
+			 }) \
+	} while(0)
+#define AR_CLEANUP() \
+	mp_cleanup(&__PL_ar_ctx)
+
+COMMON(void)	mp_cleanup(ar_context *ctx);
+
+#else /*O_MY_GMP_ALLOC*/
+
+#define AR_CTX
+#define AR_BEGIN()	(void)0
+#define AR_END()	(void)0
+#define AR_CLEANUP()	(void)0
+
+#endif /*O_MY_GMP_ALLOC*/
 
 #endif /*O_PLGMP_INCLUDED*/
